<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/my_profile"
        android:layout_width="match_parent"
        android:layout_height="53dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/my_profile"
            android:textColor="@color/grey"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:background="@color/grey"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/suggest_enterprise"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/suggest_an_enterprise"
            android:textColor="@color/grey"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:background="@color/grey"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_enterprise"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/add_an_enterprise"
            android:textColor="@color/grey"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:background="@color/grey"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow" />
    </RelativeLayout>

</LinearLayout>